# rpg-baker

./: Cargo.toml  README.md
examples/: test.rs
examples/load_project/: main.rs
examples/new_project/: main.rs
examples/scripting/: main.rs
examples/test_project/: project.json
examples/test_project/formats/: item.json
examples/test_project/rooms/: room_a.json
src/: format.rs  formats.rs  lib.rs  types.rs
src/behaviour/: helpers.rs  mod.rs
src/behaviour/std_blocks/: mod.rs
src/plugin/: mod.rs
src/project/: mod.rs  object.rs  room.rs
src/project/resource/: mod.rs
src/project/runtime/: mod.rs
src/scene/: mod.rs
src/screen/: mod.rs
src/scripting/: mod.rs
src/scripting/std_blocks/: mod.rs
src/view/: mod.rs
