[package]
name = "rpg-baker"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { version = "1.14.0", features = ["serde"] }
futures-signals = "0.3.34"
git2 = "0.20.0"
notify = "8.0.0"
ordermap = { version = "0.5.5", features = ["serde"] }
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.15.1", features = ["serde"] }
walkdir = "2.5.0"
